<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/filterDialogTitle"
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Food Type -->
    <ImageView
        android:id="@+id/icon_country"
        style="@style/AppTheme.FilterIcon"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCountry"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerCountry"
        app:srcCompat="@drawable/ic_place_white_24px"
        app:tint="@color/greySecondary" />

    <Spinner
        android:id="@+id/spinnerCountry"
        style="@style/AppTheme.FilterSpinner"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/countries"
        app:layout_constraintBottom_toTopOf="@+id/CityFilterText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_country"
        app:layout_constraintTop_toBottomOf="@+id/filterDialogTitle" />


    <!-- Location -->
    <ImageView
        android:id="@+id/icon_city"
        style="@style/AppTheme.FilterIcon"
        android:layout_marginEnd="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/CityFilterText"
        app:layout_constraintEnd_toStartOf="@+id/CityFilterText"
        app:layout_constraintStart_toStartOf="@+id/icon_country"
        app:layout_constraintTop_toTopOf="@+id/CityFilterText"
        app:srcCompat="@drawable/ic_place_white_24px"
        app:tint="@color/greySecondary" />

    <!-- Price -->

    <!-- Sort By -->
    <ImageView
        android:id="@+id/icon_sort"
        style="@style/AppTheme.FilterIcon"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerSort"
        app:layout_constraintEnd_toStartOf="@+id/spinnerSort"
        app:layout_constraintStart_toStartOf="@+id/icon_city"
        app:layout_constraintTop_toTopOf="@+id/spinnerSort"
        app:srcCompat="@drawable/ic_sort_white_24px"
        app:tint="@color/greySecondary" />

    <Spinner
        android:id="@+id/spinnerSort"
        style="@style/AppTheme.FilterSpinner"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/sort_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_sort"
        app:layout_constraintTop_toBottomOf="@+id/CityFilterText" />

    <!-- Cancel and apply buttons -->
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCancel" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/greySecondary"
        android:theme="@style/ThemeOverlay.FilterButton"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/buttonSearch" />


    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/apply"
        android:theme="@style/ThemeOverlay.FilterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSort" />

    <EditText
        android:id="@+id/CityFilterText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:editable="true"
        android:hint="City"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_city"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>

